--- a/.github/workflows/generate-snake.yml
+++ b/.github/workflows/generate-snake.yml
@@ -2,30 +2,24 @@ name: Generate Snake Animation
 
 on:
   schedule:
-    # Atualiza diariamente
-    - cron: "0 0 * * *"
-  workflow_dispatch:
+    - cron: "0 0 * * *" # Executa diariamente
+  workflow_dispatch: # Permite execução manual
 
 jobs:
-  generate:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      # Configura o repositório
-      - uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-      # Gera o arquivo SVG com o snake
-      - uses: Platane/snk@v2
+      - name: Generate Snake Animation
+        uses: Platane/snk@v2
         with:
           github_user_name: Erlon335
-          outputs: dist/snake.svg
+          output: dist/snake.svg
 
-      # Faz upload do resultado no GitHub
-      - uses: actions/upload-artifact@v3
+      - name: Push Animation to Repository
+        uses: EndBug/add-and-commit@v9
         with:
-          name: snake-animation
-          path: dist/snake.svg
-
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          message: "Atualiza animação da cobra"
+          add: "dist/snake.svg"
