--- a/.github/workflows/generate-snake.yml
+++ b/.github/workflows/generate-snake.yml
@@ -7,8 +7,9 @@ on:
       # Será atualizado a cada 5 horas.
     - cron: "0 */5 * * *"
 
-# Permite executar na na lista de Actions (utilizado para testes de build).
-  workflow_dispatch:
+permissions:
+  contents: write
+  
 
 # Regras
 jobs:
