--- a/.github/workflows/generate-snake.yml
+++ b/.github/workflows/generate-snake.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Generate Snake Animation
         uses: Platane/snk@v2
         with:
-          github_user_name: Erlon335
+          github_user_name: "Erlon335"
           output: dist/snake.svg
 
       - name: Push Animation to Repository
