--- a/.github/workflows/generate-snake.yml
+++ b/.github/workflows/generate-snake.yml
@@ -1,28 +1,48 @@
-name: Generate Snake Animation
+# Nome da Actions:  
+name: Snake Game
 
+# Controlador do tempo que sera feito a atualização dos arquivos.
 on:
   schedule:
-    - cron: "0 0 * * *" # Executa diariamente
-  workflow_dispatch: # Permite execução manual
-
+      # Será atualizado a cada 5 horas.
+    - cron: "0 */5 * * *"
+  
+# Permite executar na na lista de Actions (utilizado para testes de build).
+  workflow_dispatch:
 permissions:
   contents: write
-
+  
+# Regras
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
 
-      - name: Generate Snake Animation
-        uses: Platane/snk@v2
-        with:
-          github_user_name: "Erlon335"
-          output: dist/snake.svg
+    # Checks repo under $GITHUB_WORKSHOP, so your job can access it
+      - uses: actions/checkout@v2
 
-      - name: Push Animation to Repository
-        uses: EndBug/add-and-commit@v9
+    # Repositorio que será utilizado para gerar os arquivos.
+      - uses: Platane/snk@master
+        id: snake-gif
         with:
-          message: "Atualiza animação da cobra"
-          add: "dist/snake.svg"
+          github_user_name: Erlon335
+          gif_out_path: dist/github-contribution-grid-snake.gif
+          svg_out_path: dist/github-contribution-grid-snake.svg
+
+      - run: git status
+
+      # Para as atualizações.
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: master
+          force: true
+
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
+        with:
+          # the output branch we mentioned above
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
